--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -13,31 +13,27 @@
 
   <header>
     <div class="hero">
-      <h1><%= title %></h1>
-      <p>Your journey into the world of development begins here.</p>
-      <a href="#about-me" class="cta-btn">Learn More About Me</a>
+        <h1><%= title %></h1>
+        <p>Hi, I’m glad you’re here! Check out my work and let’s build something awesome together.</p>
+        <a href="#about-me" class="cta-btn">Get to Know Me</a>
     </div>
-  </header>
-
+</header>
 
   <section id="about-me">
     <div class="about-content">
       <img src="https://via.placeholder.com/150" alt="Profile Image" class="profile-img">
-      <h2>Welcome to My Portfolio!</h2>
-      <p>Hi, I'm Seraj, a passionate software developer with expertise in building dynamic applications. Dive into my skills and projects below to explore more about me!</p>
+      <h2>Hey there, I'm Seraj!</h2>
+      <p>Welcome to my portfolio! I’m a passionate software developer always looking for new challenges and ways to grow. I love turning ideas into dynamic, user-friendly applications that solve real-world problems. From innovative apps to cutting-edge websites, I’m here to bring my skills and enthusiasm to every project. Check out my skills and projects below—let's explore together!</p>
     </div>
   </section>
 
-
-
-<section id="skills">
+  <section id="skills">
     <h2>Skills</h2>
     <p>Explore the technologies and tools that I excel in:</p>
     <a href="/skills" class="cta-btn">
       <button class="view-skills-btn">View Skills</button>
     </a>
   </section>
-  
 
   <section id="projects">
     <h2>Projects</h2>
@@ -48,13 +44,24 @@
       </a>
     </div>
   </section>
+
+  <section id="contact">
+    <h2>Contact</h2>
+    <p>If you'd like to connect or collaborate, feel free to reach out to me!</p>
+    <ul>
+      <li>Email: <a href="mailto:seraj.alomari@lcieducation">seraj.alomari@lcieducation.com</a></li>
+      <li>LinkedIn: <a href="https://www.linkedin.com/in/seraj-alomari-5a8848330" target="_blank">linkedin.com/in/seraj-alomari-5a8848330</a></li>
+      <li>GitHub: <a href="https://github.com/Seraj24" target="_blank">github.com/Seraj24</a></li>
+    </ul>
+    <a href="../../assets/files/Resume_Seraj_Alomari.pdf" download="Resume_Seraj_Alomari.pdf" class="cta-btn">
+      <button class="view-cv-btn">Download My CV</button>
+    </a>
   </section>
 
-
+ 
   <footer>
     <p>&copy; 2024 Seraj Alomari</p>
   </footer>
-
 
 </body>
 
