--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -21,10 +21,9 @@
 
   <section id="about-me">
     <div class="about-content">
-      <img src="https://via.placeholder.com/150" alt="Profile Image" class="profile-img">
+      <img src="/images/Profile_Picture.jpg" alt="Profile Image" class="profile-img">
       <h2>Hey there, I'm Seraj!</h2>
-      <p>Welcome to my portfolio! I’m a passionate software developer always looking for new challenges and ways to grow. I love turning ideas into dynamic, user-friendly applications that solve real-world problems. From innovative apps to cutting-edge websites, I’m here to bring my skills and enthusiasm to every project. Check out my skills and projects below—let's explore together!</p>
-    </div>
+      <p>Welcome to my portfolio. I am a dedicated software developer with a strong focus on creating efficient, scalable, and user-centered solutions. With a passion for problem-solving, I specialize in transforming concepts into functional applications and websites that meet real-world needs. My approach combines innovation with practicality, ensuring that each project not only addresses specific challenges but also provides a seamless user experience. Explore my skills and projects below—I look forward to collaborating and driving impactful results together.</p>
   </section>
 
   <section id="skills">
@@ -45,7 +44,7 @@
     </div>
   </section>
 
-  <section id="contact">
+  <section id="contact" class="contact">
     <h2>Contact</h2>
     <p>If you'd like to connect or collaborate, feel free to reach out to me!</p>
     <ul>
@@ -53,14 +52,14 @@
       <li>LinkedIn: <a href="https://www.linkedin.com/in/seraj-alomari-5a8848330" target="_blank">linkedin.com/in/seraj-alomari-5a8848330</a></li>
       <li>GitHub: <a href="https://github.com/Seraj24" target="_blank">github.com/Seraj24</a></li>
     </ul>
-    <a href="../../assets/files/Resume_Seraj_Alomari.pdf" download="Resume_Seraj_Alomari.pdf" class="cta-btn">
+    <a href="/files/Resume_Seraj_Alomari.pdf" download="Resume_Seraj_Alomari.pdf" class="cta-btn">
       <button class="view-cv-btn">Download My CV</button>
     </a>
   </section>
 
  
   <footer>
-    <p>&copy; 2024 Seraj Alomari</p>
+    <p>&copy; 2025 Seraj Alomari</p>
   </footer>
 
 </body>
