--- a/src/views/projects.ejs
+++ b/src/views/projects.ejs
@@ -25,7 +25,7 @@
       <div class="project-details">
         <p><strong>Status:</strong> Completed</p>
         <p><strong>Team Members:</strong> Seraj</p>
-        <p><strong>Technologies:</strong> React, Node.js, MongoDB</p>
+        <p><strong>Technologies:</strong> PHP, JavaScript, MySQL</p>
         <p><strong>Key Feature:</strong> Interactive coding exercises</p>
 
         <a class="github-link" href="https://github.com/Seraj24/Knowledge-Planet" target="_blank"><p><strong>GitHub</strong></p></a>
@@ -45,16 +45,16 @@
       <div class="project-details">
         <p><strong>Status:</strong> In Progress</p>
         <p><strong>Team Members:</strong> Seraj, Jamie</p>
-        <p><strong>Technologies:</strong> Kotlin, Firebase, Android SDK</p>
+        <p><strong>Technologies:</strong> Java, Firebase, Android SDK</p>
         <p><strong>Key Feature:</strong> Hotel and flight integration</p>
 
-        <a class="github-link" href="https://github.com/Seraj24/Travel-Trove" target="_blank"><p><strong>GitHub</strong></p></a>
+        <a class="github-link" href="https://github.com/Seraj24/TravelTrove" target="_blank"><p><strong>GitHub</strong></p></a>
       </div>
       
       <div class="progress-bar">
-        <div class="progress" style="width: 90%;"></div>
+        <div class="progress" style="width: 100%;"></div>
       </div>
-      <p class="progress-text">90% Completed</p>
+      <p class="progress-text">100% Completed</p>
     </div>
 
 
