--- a/public/styles/skills.css
+++ b/public/styles/skills.css
@@ -1,23 +1,4 @@
 
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Roboto', sans-serif;
-  }
-  
-  body {
-    background-color: #f5f5f5;
-    color: #333;
-    font-size: 16px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    height: auto;
-    padding: 20px;
-  }
-  
   .skills {
     max-width: 900px;
     width: 100%;
@@ -56,6 +37,8 @@
   
   .skill-title span {
     font-size: 1.2em;
+    color: black;
+    font-weight: 400;
   }
   
   .skill-level {
@@ -111,7 +94,7 @@
     width: 100%;
     background: #fff;
     padding: 40px;
-    margin-bottom: 200px;
+    margin-bottom: 75px;
     border-radius: 10px;
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
     margin-top: 30px;
@@ -140,28 +123,13 @@
     border-radius: 6px;
     margin-bottom: 10px;
   }
-
-  .back-button {
-    background-color: #4CAF50;
-    color: white;
-    padding: 10px 20px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 10px 0;
-    border-radius: 5px;
-    cursor: pointer;
-  }
   
-  .back-button:hover {
-    background-color: #45a049;
-  }
+
 
   .view-title {
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-size: 100px;
-    color: #333;  
+    color: #45a049;  
     text-align: center; 
     margin-bottom: 20px; 
   }
@@ -207,8 +175,13 @@
     --width: 75%;
   }
 
-  /* Java */
+  /* PHP */
   .skill:nth-child(6) .skill-progress {
+    --width: 75%;
+  }
+
+  /* Java */
+  .skill:nth-child(7) .skill-progress {
     --width: 75%;
   }
   
