--- a/src/views/404.ejs
+++ b/src/views/404.ejs
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>404 - Page Not Found</title>
-  <link rel="stylesheet" href="not_found.css">
+  <link rel="stylesheet" href="styles/not_found.css">
 </head>
 <body>
   <section class="error-page">
