Update index page layout and fixed styling on contact page

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -55,12 +55,7 @@
 
   <section id="contact" class="contact">
     <h2>Contact</h2>
-    <p>If you'd like to connect or collaborate, feel free to reach out to me!</p>
-    <ul>
-      <li>Email: <a href="mailto:seraj.alomari@lcieducation">seraj.alomari@lcieducation.com</a></li>
-      <li>LinkedIn: <a href="https://www.linkedin.com/in/seraj-alomari-5a8848330" target="_blank">linkedin.com/in/seraj-alomari-5a8848330</a></li>
-      <li>GitHub: <a href="https://github.com/Seraj24" target="_blank">github.com/Seraj24</a></li>
-    </ul>
+    <p>If you'd like to get in touch, feel free to visit my <a href="/contact" class="cta-btn contact-btn">Contact Page</a>.</p>
     <a href="/files/Resume_Seraj_Alomari.pdf" download="Resume_Seraj_Alomari.pdf" class="cta-btn">
       <button class="view-cv-btn">Download My CV</button>
     </a>
