--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -15,8 +15,8 @@
 
   <header>
     <div class="hero">
-      <h1><%= title %></h1>
-      <p>Hi, I’m Seraj—welcome to my portfolio. I’m an Information Technology student specializing in web and mobile app development, with a focus on game development in Unity. I’m currently on the lookout for internship opportunities where I can further develop my skills and contribute to real-world projects.</p>
+      <h1>Hi, I am Seraj Alomari</h1>
+      <p>I’m an Information Technology student specializing in web and mobile app development, with a focus on game development in Unity. I’m currently on the lookout for internship opportunities where I can further develop my skills and contribute to real-world projects.</p>
     </div>
   </header>
 
