--- a/src/views/projects.ejs
+++ b/src/views/projects.ejs
@@ -28,8 +28,7 @@
       <div class="project-details">
         <p><strong>Status:</strong> Completed</p>
         <p><strong>Team Members:</strong> Seraj</p>
-        <p><strong>Technologies:</strong> PHP, JavaScript, MySQL</p>
-        <p><strong>Key Feature:</strong> Interactive coding exercises</p>
+        <p><strong>Technologies:</strong> PHP, HTML, CSS, JavaScript, MySQL</p>
 
         <a class="github-link" href="https://github.com/Seraj24/Knowledge-Planet" target="_blank"><p><strong>GitHub</strong></p></a>
       </div>
@@ -49,7 +48,6 @@
         <p><strong>Status:</strong> Completed</p>
         <p><strong>Team Members:</strong> Seraj, Jamie</p>
         <p><strong>Technologies:</strong> Java, Firebase, Android SDK</p>
-        <p><strong>Key Feature:</strong> Hotel and flight integration</p>
 
         <a class="github-link" href="https://github.com/Seraj24/TravelTrove" target="_blank"><p><strong>GitHub</strong></p></a>
       </div>
@@ -69,7 +67,6 @@
         <p><strong>Status:</strong> In Progress</p>
         <p><strong>Team Members:</strong> Seraj</p>
         <p><strong>Technologies:</strong> HTML, CSS, JavaScript</p>
-        <p><strong>Key Feature:</strong> Interactive project showcase</p>
 
         <a class="github-link" href="https://github.com/Seraj24/My-Portfolio" target="_blank"><p><strong>GitHub</strong></p></a>
       </div>
@@ -87,10 +84,9 @@
         <div class="project-details">
           <p><strong>Status:</strong> Completed</p>
           <p><strong>Team Members:</strong> Seraj</p>
-          <p><strong>Technologies:</strong> ASP.NET Core, SQL, HTML, CSS, JavaScript</p>
-          <p><strong>Key Feature:</strong> Seamless System</p>
+          <p><strong>Technologies:</strong> ASP.NET Core, SQL, HTML, CSS, JavaScript, Bootstrap, jQuery</p>
   
-          <a class="github-link" href="https://github.com/Seraj24/PRMS" target="_blank"><p><strong>GitHub</strong></p></a>
+          <a class="github-link" href="https://github.com/Seraj24/Property-Rental-Management-System" target="_blank"><p><strong>GitHub</strong></p></a>
         </div>
         
         <div class="progress-bar">
